apps/base/ollama/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  labels:
    app: ollama
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ollama.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: ollama
          port: http
  tls:
    secretName: ollama-local-hejsan-xyz-tls
